CSS Improvements and minor html fixes for bug squash

--- a/app/scss/calendar/_calendar.scss
+++ b/app/scss/calendar/_calendar.scss
@@ -20,12 +20,6 @@
         }
     }
 
-    #calendarHeader
-    {
-       
-
-    }
-
     #calendarContainer
     {
 
@@ -157,33 +151,32 @@
     		}
     	}
 
-    	.summaryHeader
-    	{
+    	.summaryHeader {
     		background-color: $TPGrey3;
-    		.calendarDate{
+    		cursor: default;
+
+            .calendarDate{
                 color: white;
                 font-family: $fontFamilyLight;
                 font-size: $fontSizeSmall;
                 padding-top:4px;
             }
-            cursor: default;
     	}
 
-        .daysOfWeek
-        {
+        .daysOfWeek {
 
-            div
-            {
-                    @include calc(width, "(100% - 297px) /7");
-                    float: left;
-                    padding-bottom: 0px;
-                    padding-left: 9px;
-                    padding-right: 0px;
-                    font-Family: $fontFamilyLight;
-                    font-size: $fontSizeSmall;
-                    color: $TPGrey3;
-                    text-align: left;
-                    height: 15px;
+            .hide-for-small, 
+            .show-for-small {
+                @include calc(width, "(100% - 297px) /7");
+                float: left;
+                padding-bottom: 0px;
+                padding-left: 9px;
+                padding-right: 0px;
+                font-Family: $fontFamilyLight;
+                font-size: $fontSizeSmall;
+                color: $TPGrey3;
+                text-align: left;
+                height: 15px;
             }
         }
     }
@@ -194,15 +187,13 @@
         @include box-shadow(0px 3px 8px -4px $TPGrey3);
     }
 
-    body.clipboardEmpty
-    {
-        .paste
-        {
+    .clipboardEmpty {
+        .paste {
             color:$TPGrey2;
         }
     }
 
-    body.pasteDisabled
+    .pasteDisabled
     {
         label.paste
         {
@@ -210,7 +201,7 @@
         }
     }
 
-    body.clipboardFull
+    .clipboardFull
     {
         .paste
         {
